selfhost/test/typechecker/funcdecl_error_param_default_value_ident.out
Error at %FILE_NAME%:1:14
Unknown variable 'x'
  |  func foo(a = x) {}
                  ^
No variable with that name is visible in current scope
